--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /ArbolEneario/ArbolEneario/nbproject/private/
 /ArbolEneario/ArbolEneario/build/
 /ArbolEneario/ArbolEneario/dist/
+/Arbol Nario/build/
+/Arbol Nario/nbproject/private/
