Se cambia interfaz gráfica

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /Arbol Nario/build/
 /Arbol Nario/nbproject/private/
 /Arbol Nario/dist/
+/CodificacionHuffman/nbproject/private/
+/CodificacionHuffman/build/
+/CodificacionHuffman/dist/
